Changed "News from UG" to "News from Mary"

--- a/ugweb.html
+++ b/ugweb.html
@@ -99,7 +99,7 @@
         <!-- news -->
         <div>
             <!-- news from ug -->
-            <h1>News from UG</h1>
+            <h1>News from MARY</h1>
             <!-- image -->
             <img style="width: 1000PX; height: 500px;" src="./images/261A2589.jpg">
             <!-- date -->
